--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-dinky
+title: Welcome to Brian Willess' Page
+description: This page contains information and links to support the Avnet Azure Sphere Bootcamps
